--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="avatar">
                 <img src="img/46680006975_566f65d8fa_k.jpeg" alt="Avatar">
             </div>
-            <h2>Olá, eu sou Adryan</h2>
+            <h2>Olá, eu sou Carlos</h2>
             <p>Bem-vindo ao meu portfólio pessoal!</p>
         </div>
 
